--- a/trunk/god/war/index.html
+++ b/trunk/god/war/index.html
@@ -7,21 +7,38 @@
 <!-- but may lead to some differences in layout.   -->
 
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
-  </head>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<title>Hello App Engine</title>
+		<script type="text/javascript" src="/dialog/ymPrompt.js"></script>
+		<link rel="stylesheet" type="text/css"
+			href="/dialog/skin/qq/ymPrompt.css" />
 
-  <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="god"/>God</td>
-      </tr>
-    </table>
-  </body>
+	</head>
+
+	<body>
+		<h1>
+			Hello App Engine!
+		</h1>
+		<script type="text/javascript">
+//	ymPrompt.alert( {
+	//	message : '标题不能为空',
+	//	title : '提示信息',
+	//	winAlpha : 0.3
+	//});
+	ymPrompt.alert({message:'悬浮右下角，模拟qq',fixPosition:true,winPos:'rb',showMask:false})
+</script>
+		<table>
+			<tr>
+				<td colspan="2" style="font-weight: bold;">
+					Available Servlets:
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href="god" />God 
+				</td>
+			</tr>
+		</table>
+	</body>
 </html>
