--- a/Hope/war/kindeditor/examples/demo-03.html
+++ b/Hope/war/kindeditor/examples/demo-03.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor 3.2</title>
+  <title>KindEditor</title>
   <style type="text/css" rel="stylesheet">
     form {
     margin: 0;
@@ -27,6 +27,7 @@
       <textarea id="content3" name="content" style="width:700px;height:300px;"></textarea>
     </div>
     <input type="button" name="button" value="加载编辑器" onclick="javascript:KE.create('content3');" />
+    <input type="button" name="button" value="卸载编辑器" onclick="javascript:KE.remove('content3');" />
     <input type="submit" name="button" value="提交内容" />
   </form>
 </body>
