--- a/Hope/war/kindeditor/examples/demo-01.html
+++ b/Hope/war/kindeditor/examples/demo-01.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>KindEditor 3.2</title>
+  <title>KindEditor</title>
   <style type="text/css" rel="stylesheet">
     form {
-    margin: 0;
+        margin: 0;
     }
     .editor {
-    margin-top: 5px;
-    margin-bottom: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
   </style>
   <script type="text/javascript" charset="utf-8" src="./../kindeditor.js"></script>
