--- a/trunk/show/WebRoot/controls/kindeditor/plugins/image.html
+++ b/trunk/show/WebRoot/controls/kindeditor/plugins/image.html
@@ -43,7 +43,7 @@
   </script>
 </head>
 <body>
-  <form name="uploadForm" method="post" enctype="multipart/form-data" action="./../php/upload.php">
+  <form name="uploadForm" method="post" enctype="multipart/form-data" action="/show/hello.action">
     <input type="hidden" id="editorId" name="id" value="" />
     <table border="0" cellpadding="0" cellspacing="0">
       <tr>
@@ -54,7 +54,7 @@
           </select>
         </td>
         <td class="right1">
-          <input type="file" id="imgFile" name="imgFile" style="width:220px;" />
+          <input type="file" id="imgFile" name="excelImage" style="width:220px;" />
           <input type="text" id="url" name="url" value="http://" maxlength="255" style="width:220px;display:none;" />
         </td>
       </tr>
