--- a/demos/treedemo/WebRoot/exttree/stree.html
+++ b/demos/treedemo/WebRoot/exttree/stree.html
@@ -42,7 +42,7 @@ Ext.onReady(function(){
       lines:true //节点间的虚线条
       //loader : new Tree.TreeLoader( {////加载节点数据
 
-            //  dataUrl : 'OrgTreeJsonData.action'
+            //  dataUrl : 'http://localhost:8080/treedemo/navigatejson?id=1'
 
            //就是要动态载入数据的请求地址，这里请求时会提交一数为node的值，值为root即new Tree.AsyncTreeNode()对象的id值
 
@@ -85,7 +85,15 @@ Ext.onReady(function(){
      id:"sys",
      text:"系统设置"
  }));
- mytree.setRootNode(root);//设置根节点
+  var remoteroot = new Ext.tree.AsyncTreeNode({
+        text: 'Ext JS',
+        draggable:false,
+        id:'source'
+    });
+  //  tree.setRootNode(root)
+  //mytree.setRootNode(remoteroot);//设置根节点
+ mytree.setRootNode(remoteroot);//设置根节点
  mytree.render();//不要忘记render(),否则不显示
+ root.expand();
 })
 </script>
