--- a/demos/treedemo/WebRoot/index.html
+++ b/demos/treedemo/WebRoot/index.html
@@ -1,16 +1,7 @@
-<%@ page language="java" import="java.util.*" pageEncoding="ISO-8859-1"%>
-<%
-String path = request.getContextPath();
-String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.getServerPort()+path+"/";
-%>
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-  <head>
-    <base href="<%=basePath%>">
-    
-    <title>My JSP 'index.jsp' starting page</title>
-	<link rel="stylesheet" type="text/css" href="codebase/dhtmlxvault.css" />
+<head>
+    <title>Upload Control</title>
+    <link rel="stylesheet" type="text/css" href="codebase/dhtmlxvault.css" />
 
     <script language="JavaScript" type="text/javascript" src="codebase/dhtmlxvault.js"></script>
 
@@ -65,3 +56,4 @@ String basePath = request.getScheme()+"://"+request.getServerName()+":"+request.
 
 </body>
 </html>
+
