--- a/demos/treedemo/WebRoot/dtree/tree.html
+++ b/demos/treedemo/WebRoot/dtree/tree.html
@@ -7,7 +7,8 @@
 
 		<link rel="StyleSheet" href="dtree.css" type="text/css" />
 		<script type="text/javascript" src="dtree.js"></script>
-
+		<script type="text/javascript" src="TreeSelect.js"></script>
+		<style type="text/css" href="treeselect.css"></style>
 	</head>
 
 	<body>
@@ -54,8 +55,8 @@
 		d.add(11,9,'Mom\'s birthday','tree.html');
 		//d.add(12,0,'Recycle Bin','tree.html','','','img/trash.gif');
         d.add(12,0,'Recycle Bin','tree.html','','','img/trash.gif');
-		document.write(d);
-
+		//document.write(d);
+CreateTreeSelect("SelctOrg",d,"","",380);
 		//-->
 	</script>
 
