--- a/demos/treedemo/WebRoot/exttree/stree.html
+++ b/demos/treedemo/WebRoot/exttree/stree.html
@@ -47,7 +47,12 @@ Ext.onReady(function(){
            //就是要动态载入数据的请求地址，这里请求时会提交一数为node的值，值为root即new Tree.AsyncTreeNode()对象的id值
 
      //})
-     loader: new Ext.tree.TreeLoader({dataUrl: "../navigatejson"})
+     loader: new Ext.tree.TreeLoader({dataUrl: "../navigatejson",
+     baseParams:{id :2}
+     
+     
+     })
+   
   });
   //根节点
   var root=new Ext.tree.TreeNode({
